--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task_2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build-css": "tailwindcss build src/styles.css -o public/styles.css"
   },
